@@ -41,6 +41,9 @@ Extension Modules
 Library
 -------
 
+- Bug #1560617: in pyclbr, return full module name not only for classes,
+  but also for functions.
+
 - Bug #1566602: correct failure of posixpath unittest when $HOME ends
   with a slash.
 
